--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,11 +6,7 @@
 
     <section>
         <p>Welcome to my site.</p>
-        <ul>
-            {{ range .Site.Menus.main }}
-                <li><a href="{{ .URL }}">{{ .Name }}</a></li>
-            {{ end }}
-        </ul>
+        <p>Navigate the tabs to find all type of nice things about me.</p>
     </section>
 </article>
 {{ end }}
