--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,6 @@
 <nav class="site-nav">
-    <a class="nav-brand" href="{{ "/" | relURL }}">SMJ</a>
+    {{/* Ensure the SMJ brand reliably routes to the canonical homepage. */}}
+    <a class="nav-brand" href="{{ .Site.Home.Permalink }}">SMJ</a>
     <ul class="nav-menu">
         {{ range .Site.Menus.main }}
             <li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
