--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,8 +7,9 @@
     <!-- Basic responsive meta -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Optional: global stylesheet (use relURL so it works on GitHub Pages subpaths) -->
-    <link rel="stylesheet" href="{{ "css/main.css" | relURL }}">
+    <!-- Compile SCSS entry via Hugo Pipes for cache-busted CSS -->
+    {{ $scss := resources.Get "scss/main.scss" | resources.ToCSS (dict "targetPath" "css/main.css" "outputStyle" "compressed") | resources.Fingerprint }}
+    <link rel="stylesheet" href="{{ $scss.RelPermalink }}">
 </head>
 
 <body>
