--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,7 @@
 <footer>
-    <p>Contact: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-    <p><a href="https://www.linkedin.com/in/your-linkedin/">LinkedIn Profile</a></p>
-    <p>Last build: {{ now.Format "2006-01-02 15:04" }}</p>
+    <p>
+        Contact: <a href="mailto:santiagomj@gmail.com">santiagomj@gmail.com</a> • 
+        <a href="https://www.linkedin.com/in/santiagomorenojaureguizar/">LinkedIn</a> • 
+        Last build: {{ now.Format "2006-01-02 15:04" }}
+    </p>
 </footer>
