--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,7 +1,9 @@
-<footer>
-    <p>
-        Contact: <a href="mailto:santiagomj@gmail.com">santiagomj@gmail.com</a> • 
-        <a href="https://www.linkedin.com/in/santiagomorenojaureguizar/">LinkedIn</a> • 
-        Last build: {{ now.Format "2006-01-02 15:04" }}
+<footer class="site-footer">
+    <p class="footer-meta" role="contentinfo">
+        <span>Contact: <a href="mailto:santiagomj@gmail.com">santiagomj@gmail.com</a></span>
+        <span class="footer-separator" aria-hidden="true">•</span>
+        <span><a href="https://www.linkedin.com/in/santiagomorenojaureguizar/">LinkedIn</a></span>
+        <span class="footer-separator" aria-hidden="true">•</span>
+        <span>Last build: {{ now.Format "2006-01-02 15:04" }}</span>
     </p>
 </footer>
