Update menu icon and footer message

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,6 +4,6 @@
         <span class="footer-separator" aria-hidden="true">•</span>
         <span><a href="https://www.linkedin.com/in/santiagomorenojaureguizar/">LinkedIn</a></span>
         <span class="footer-separator" aria-hidden="true">•</span>
-        <span>Last build: {{ now.Format "2006-01-02 15:04" }}</span>
+        <span>This was built with the hell of codex and Hugo. {{ now.Format "2006-01-02" }}</span>
     </p>
 </footer>
