Minor tweak of engineer tittle

--- a/assets/scss/themes/_theme-terminal.scss
+++ b/assets/scss/themes/_theme-terminal.scss
@@ -52,7 +52,7 @@
 
   // Command prompt style for headings
   h1::before {
-    content: "user@santi-info:~$ ";
+    content: "santi@work:~$ ";
     color: var(--terminal-green);
     font-size: 0.85em;
   }
